Modify convertToJdbcUrl method to decode URL-encoded passwords before constructing JDBC URL parameters